# ai-readiness-assessment

./: .gitignore  AGENTS.md  CHANGELOG.md  HARNESS.md  LICENSE  ONBOARDING.md  README.md  REFLECTION_LOG.md  mkdocs.yml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.cursor/rules/: constraints.mdc  conventions.mdc
.github/: copilot-instructions.md
.github/workflows/: agentic-behaviours.yml  changelog-gate.yml  onboarding-gate.yml  pages.yml  release.yml  spec-first-gate.yml
.windsurf/rules/: constraints.md  conventions.md
assessments/: 2026-06-03-assessment-2.html  2026-06-03-assessment-2.md  2026-06-03-assessment.md
commands/: ai-readiness-assess.md
docs/: examples.md  index.md
specs/: 0001-introduce-specs-layer.md  0002-enforce-spec-first.md  0003-habitat-build-gap-uses-14-dim-mean.md  0004-simplify-report-header.md  0005-align-ai-readiness-language.md  0006-html-design-marketing-alignment.md  0007-cta-prominence-book-secondary.md  README.md  TEMPLATE.md
tests/: README.md  auto-results.md  run.py  test-run-2026-05-11.md
tests/fixtures/level-3-habitat/: .gitignore  CLAUDE.md  HARNESS.md  ONBOARDING.md  README.md  REFLECTION_LOG.md  expected.md  pyproject.toml  test-report-2026-05-11.md
tests/fixtures/level-3-habitat/.github/workflows/: ci.yml
tests/fixtures/level-3-habitat/assessments/: 2026-05-11-assessment.md
tests/fixtures/level-3-habitat/docs/adr/: 0001-python-3-10-minimum.md
tests/fixtures/level-3-habitat/skills/wordcount-style/: SKILL.md
tests/fixtures/level-3-habitat/src/wordcount/: __init__.py
(+92 files in other folders)
