[project]
name = "wordcount"
version = "0.4.0"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "--cov=wordcount --cov-fail-under=80"
testpaths = ["tests"]
